[package]
name = "get_balance"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde_yaml = "0.9.34"
reqwest = { version = "0.12.12", features = ["json"] }
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
serde_json = "1.0.116"
bs58 = "0.5.1"
solana-sdk = "2.2.2"
